<resources>
    <string name="app_name">PassengerSafety</string>
    <string name="refresh">Refresh</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="disconnect_pairing">Disconnect Pairing</string>
    <string name="connected_device">Connected Device</string>
    <string name="disconnect_device">Disconnect Device</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="recieve">Recieve</string>
    <string name="send">Send</string>
    <string name="enter_text">Enter Text</string>
    <string name="_00_00">00:00</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="stop">Stop</string>
    <string name="signal">Signal</string>
    <string name="temperature">Temperature (F):</string>
    <string name="temperature_reading">Temperature Reading</string>

</resources>
